# llm-inference

./: .gitignore  Dockerfile  MANIFEST.in  README.md  new.values.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  values.yaml
.github/workflows/: docker-image.yml
.run/: llm_inference - EMBEDDING.run.xml  llm_inference - GUARDRAIL.run.xml  llm_inference - SCORING.run.xml
llm_inference/: __main__.py  metrics.py  model.py
llm_inference/routes/: embedding.py  guardrail.py  healthcheck.py  models.py  scoring.py
tests/: pytest.ini  test_model.py  test_routes.py
